--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -13,9 +13,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    
-    
-    
+
     <% if current_user.is_a?(User) %>
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
@@ -25,7 +23,7 @@
     
     <%= yield %>
     
-   <%= render "shared/nav" %>
+   <%= render "shared/nav", location: 'bottom' %>
     
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
