Implemented the content tag helper methods

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -19,6 +19,8 @@
     <%= yield %>
     
    <%= render "shared/nav", location: 'bottom' %>
+   
+   <%= source_helper("blog") %>
 
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
