Integrated helper methods from ActionView

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
 <h1>Contactpage</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "3606493232" %></p>
+
+<p><%= number_to_currency "150" %></p>
+
+<p><%= number_with_delimiter "9898989898" %></p>
