--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,9 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Blog Title</th>
+      <th>Published</th>
       <th>Body</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
