--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,21 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    
-   <%= render "shared/nav", location: 'top' %>
-    
-    <%= login_helper %>
-    
-    <%= yield %>
-    
-    <%= copyright_generator %>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-    <%= source_helper("application") %>
+          <%= render "shared/application_nav" %>
+    
+          <%= login_helper %>
+    
+          <%= yield %>
+    
+          <%= copyright_generator %>
+
+          <%= source_helper("application") %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
