Updated styles for master layout along with helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,13 @@
         <div class="cover-container">
 
           <%= render "shared/application_nav" %>
-    
-          <%= login_helper %>
-    
-          <%= yield %>
-    
-          <%= copyright_generator %>
 
+          <%= yield %>
+          
+          <%= render "shared/application_footer" %>
+          
           <%= source_helper("application") %>
+
         </div>
       </div>
     </div>
