--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,22 @@
-<h1>Contactpage</h1>
+<h1>Do you want to hire me?</h1>
 
-<p><%= number_to_phone "3606493232" %></p>
+<hr>
 
-<p><%= number_to_currency "150" %></p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Office Address</h3>
 
-<p><%= number_with_delimiter "9898989898" %></p>
+    <p>800 E Ash Ln, Suite 421, Euless, TX 76039</p>
+
+    <h3>Phone</h3>
+
+    <p><%= number_to_phone "3606493232" %></p>
+
+    <h3>Email</h3>
+
+    <p><a href="mailto:fred@fredwarsaw.com?subject=PortfolioContact" "email me">Email me</a> </p>
+  </div>
+
+  <div class="col-md-6">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3351.4783782616764!2d-97.07163778523378!3d32.859060187105584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e803fbe4f7171%3A0x617d5da20085a443!2s800+E+Ash+Ln%2C+Euless%2C+TX+76039!5e0!3m2!1sen!2sus!4v1488018498937" width="450" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>  </div>
+</div>
