Implemented partials for blogs, font awesome and pagination

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,10 +18,10 @@
 
   <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', rows: 30 %>
+    <%= f.text_area :body, class: 'form-control', rows: 15 %>
   </div>
 
   <div class="form-group">
-    <%= f.submit "Submit" class: 'btn btn-primary' %>
+    <%= f.submit "Submit", class: 'btn btn-primary' %>
   </div>
 <% end %>
