--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,7 @@
+<div class="container portfolio-form">
+
 <h1>Edit this Portfolio Item</h1>
 
 <%= render 'form', portfolio_itme: @portfolio_itme %>
+
+</div>
