--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Create a new Portfolio Item</h1>
+<div class="container portfolio-form">
+  <h1>Create a new Portfolio Item</h1>
 
-<%= render 'form', portfolio_itme: @portfolio_itme %>
+  <%= render 'form', portfolio_itme: @portfolio_itme %>
+</div>
+
+
