Added new nav bar style for blog

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -192,6 +192,10 @@ h6, .h6 {
  }
  
  .blogcrumb a {
-    font-size: 1.25em;
-    margin: 0px 10px 0px 10px;
+  font-size: 1.25em;
+  margin: 0px 10px 0px 10px;
+}
+
+.blog-nav {
+  margin-bottom: 30px;
 }
