Updated source tracking feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    
+
     <meta name="keywords" content="<%= @seo_keywords %>" />
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -16,26 +17,24 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
-          
+
           <%= video_tag(
-            'HardDrivePhotojpeg.mp4',
-            id: 'page-bg',
-            autoplay: true,
-            loop: true,
-            muted: true,
-            poster: 'home_HardDrivePhotojpeg.mp4'
+              'HardDrivePhotojpeg.mp4',
+              id: 'background',
+              autoplay: true,
+              loop: true,
+              muted: true,
+              poster: 'home_bg.png'
             )
             %>
 
           <%= render "shared/application_nav" %>
 
           <%= yield %>
-          
+
           <%= render "shared/application_footer" %>
-          
+
           <%= alerts %>
-          
-          <%= source_helper("application") %>
 
         </div>
       </div>
