--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -191,11 +191,16 @@ h6, .h6 {
    font-weight: 700;
  }
  
+ 
  .blogcrumb a {
-  font-size: 1.25em;
-  margin: 0px 10px 0px 10px;
-}
+   font-size: 1.25em;
+   margin: 0 10px 0 10px;
+ }
 
 .blog-nav {
   margin-bottom: 30px;
+}
+
+.blog-sidebar-source {
+  margin-top: 20px;
 }
