--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    
+
     <meta name="keywords" content="<%= @seo_keywords %>" />
 
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,15 +13,13 @@
   </head>
 
   <body>
-    <%= render "shared/portfolio_nav" %>
-    <%= render "shared/portfolio_masthead" unless logged_in?(:site_admin) %>
+    <%= render 'shared/portfolio_nav' %>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
     <%= yield %>
 
     <%= render 'shared/portfolio_footer' %>
-    
-    <%= alerts %>
 
-    <%= source_helper("application") %>
+    <%= alerts %>
   </body>
 </html>
