Updated about page to have collapsible components

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,7 +189,7 @@ body {
   margin-right: 15px;
 }
 
-#page-bg {
+#background {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -200,7 +200,7 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('home_HardDrivePhotojpeg.mp4') no-repeat;
+  background: image-url('home_bg.png') no-repeat;
   background-size: cover;
 }
 
@@ -213,12 +213,12 @@ body {
   margin: 20px;
 }
 
-.tech-news a {
-  color: green;
-}
-
 .tech-news > .card {
   padding: 30px;
+}
+
+.tech-news a {
+  color: green;
 }
 
 .app-card-container {
@@ -232,4 +232,13 @@ body {
 
 .profile-img {
   border: 1px solid grey;
+}
+
+.app-card-container a {
+  color: blue;
+}
+
+.card-block {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
