Updated home and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
 
     <div class="row">
       <div class="col-md-4">
-        <%= image_tag "FredG.jpg", width: 200, alt: "profile image", class: 'profile-img' %>
+        <%= image_tag "FredG1.jpg", width: 200, alt: "profile image", class: 'profile-img' %>
         <div class="skills">
           <% @skills.each do |skill| %>
             <div class="skill">
@@ -26,9 +26,9 @@
       </div>
 
       <div class="col-md-8">
-        <p>With over a decade of development experience in a number of industries I realized that the typical product creation process between clients and developers was flawed. All too often developers rarely communicate to clients throughout the development stage, resulting in a final product that fails to reach the goal sought by the customer and end user.</p>
+        <p>United States Navy veteran turned information technology (IT) professional. Certified in CompTia (A+, Network+ and Security+), Cisco (CCNA Routing & Switching, CCNA Security and CCDA) Microsoft (MTA - Database, MCP and MCSA - SQL Server 2014) and AXELOS (ITIL).</p>
 
-        <p>For this reason I decided to utilize a completely different development pattern that focuses on highly focused communication and transparent design patterns. When I take on a project not only do I work to craft the application according to the client's specifications, I give daily updates to ensure that the project is aligning properly with the client's goals. The end result is the right product, delivered on time, and on budget.</p>
+        <p>As a freelance web developer, my main focus is on communication, and transparent design and development patterns. I approach every project with the client's specifications prioritized. Updates are daily to ensure that the project is aligned properly with the client's goals. The end result is the right product, delivered on time, and on budget.</p>
 
         <p>
           <button
